<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".presentation.auth.AuthFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/enter_email"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@id/enter_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/enter_password"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:autofillHints="password"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@id/bt_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_email" />

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/Enter"
            app:iconTint="#CCACAC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_password" />

        <TextView
            android:id="@+id/bt_sing_up"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/registration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_ok" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>