<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.finish.FinishFragment">

    <TextView
        android:id="@+id/tv_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/RESULT"
        android:textSize="34sp"
        android:layout_marginTop="125dp"/>

    <TextView
        android:id="@+id/count_answer_and_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_finish"
        app:layout_constraintBottom_toTopOf="@id/bt_finish"
        android:text="@string/_5_5"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/bt_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/count_answer_and_tasks"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/exit_test"
        android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>