<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.mode_testing.ModeTestingFragment">

    <TextView
        android:id="@+id/text_logo_mode"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/choose_mode_test"
        android:minLines="2"
        android:textSize="24sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/button_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/test"
        android:textSize="24sp"
        android:layout_marginBottom="120dp"/>

    <Button
        android:id="@+id/button_trening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_test"
        android:text="@string/Trening"
        android:textSize="24sp"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>