<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.choose_theme.ChooseThemeFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_logo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@mipmap/ic_launcher_foreground"/>

    <TextView
        android:id="@+id/text_logo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/text_logo"
        android:textSize="18sp"
        android:maxLines="4"
        android:minLines="2"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/button_fauna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fauna"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="24sp"
        android:layout_marginBottom="120dp"/>

    <Button
        android:id="@+id/button_flora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FLORA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_fauna"
        android:textSize="24sp"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>