<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.test.TestFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/image_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_logo"
        android:layout_marginStart="20dp"
        android:background="@mipmap/ic_launcher_foreground"/>

    <TextView
        android:id="@+id/text_logo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/text_logo"
        android:textSize="18sp"
        android:maxLines="4"
        android:minLines="2"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/image_main"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        />

    <ImageView
        android:id="@+id/image_main"
        android:layout_width="320dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/button_answer"
        />

    <EditText
        android:id="@+id/enter_answer"
        android:layout_width="240dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_main"
        app:layout_constraintBottom_toTopOf="@id/button_answer"
        android:hint="@string/enter_the_answer" />

    <Button
        android:id="@+id/button_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        app:layout_constraintTop_toBottomOf="@id/image_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="24sp"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>